[package]
name = "cargo-crate"
version = "0.0.3"
edition = "2021"
description = "A set of crate related cargo commands. You can for instance get the information about a crate, as text or json, including the owners of a crate and its versions."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
keywords = ["cli", "cargo", "crate", "cargo-subcommand"]
default-run = "cargo-crate"
repository = "https://github.com/chevdor/cargo-crate"
homepage = "https://github.com/chevdor/cargo-crate"
documentation = "https://github.com/chevdor/cargo-crate"
authors = ["Wilfried Kopp <chevdor@gmail.com>"]
readme = "README.md"

[[bin]]
name = "cargo-crate"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive", "env", "unicode", "cargo"] }
env_logger = "0.9"
log = "0.4"
color-eyre = "0.6"
webbrowser = "0.7"
lib-cargo-crate = { path = "../lib", version = "0.1" }

[dev-dependencies]
assert_cmd = "2.0"
