[package]
name = "cargo-crate"
version = "0.2.2"
edition = "2021"
description = "A set of crate related cargo commands. You can for instance get the information about a crate, as text or json, including the owners of a crate and its versions."

license = "MIT"
keywords = ["cli", "cargo", "crate", "cargo-subcommand"]
default-run = "cargo-crate"
repository = "https://github.com/chevdor/cargo-crate"
homepage = "https://github.com/chevdor/cargo-crate"
documentation = "https://docs.rs/crate/cargo-crate"
authors = ["Wilfried Kopp <chevdor@gmail.com>"]
readme = "README.md"

[[bin]]
name = "cargo-crate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = [
    "std",
    "derive",
    "env",
    "unicode",
    "cargo",
] }
env_logger = "0.10"
log = "0.4"
color-eyre = { version = "0.6", default-features = false }
webbrowser = "0.8"
lib-cargo-crate = { path = "../lib", version = "0.2" }
anyhow = "1.0.70"
inquire = { version = "0.6", optional = true }

[dev-dependencies]
assert_cmd = "2.0"

[features]
default = ["interactive"]
interactive = ["dep:inquire"]
