[package]
name = "lib-cargo-crate"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "The lib for cargo-crate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
documentation = "https://docs.rs/crate/lib-cargo-crate"
[dependencies]
crates_io_api = { version = "0.8", default-features = false, features = [
    "rustls",
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byte-unit = "4.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
chrono-humanize = "0.2"
cargo_toml = "0.15.2"
