[package]
name = "lib-cargo-crate"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "The lib for cargo-crate"

documentation = "https://docs.rs/crate/lib-cargo-crate"
[dependencies]
crates_io_api = { version = "0.11", default-features = false, features = [
    "rustls",
] }
anyhow = { version = "1.0", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byte-unit = "5.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
chrono-humanize = "0.2"
cargo_toml = "0.20"
