[package]
name = "lib-cargo-crate"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "The lib for cargo-crate"

documentation = "https://docs.rs/crate/lib-cargo-crate"
[dependencies]
crates_io_api = { version = "0.11.0", default-features = false, features = [
    "rustls",
] }
anyhow = { version = "1.0.94", default-features = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
byte-unit = "5.1.6"
chrono = { version = "0.4.39", features = ["unstable-locales"] }
chrono-humanize = "0.2.3"
cargo_toml = "0.21.0"
